--- a/index.html
+++ b/index.html
@@ -28,14 +28,13 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="index.html">Introduction</a></li>
+							<li><a href="landing.html">C'est quoi la cryptomonnaie?</a></li>
+							<li><a href="generic.html">Qu'es-ce que le blockchain?</a></li>
+							<li><a href="elements.html">Aide mémoire</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Start Learning</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
 						</ul>
 					</nav>
 
@@ -43,11 +42,10 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi, my name is Forty</h1>
+								<h1>Bienvenue sur <b>MyCryptoJourney</b>! Ici, je vais expliquer clairement ce qu’est la cryptomonnaie, son fonctionnement et les bases essentielles à connaître selon moi.   </h1>
 							</header>
 							<div class="content">
-								<p>A responsive site template designed by HTML5 UP<br />
-								and released under the Creative Commons.</p>
+								<p>Sur ce site web, tu vas trouver à peu près tout ce que j'ai appris concernant la cryptomonnaie.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Get Started</a></li>
 								</ul>
