--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Bienvenue sur <b>MyCryptoJourney</b>! Ici, je vais expliquer clairement ce qu’est la cryptomonnaie, son fonctionnement et les bases essentielles à connaître selon moi.   </h1>
+								<h1>Bienvenue sur <b>MyCryptoJourney</b>!</h1>
 							</header>
 							<div class="content">
-								<p>Sur ce site web, tu vas trouver à peu près tout ce que j'ai appris concernant la cryptomonnaie.</p>
+								<p>Ici, je vais expliquer clairement ce qu’est la cryptomonnaie, son fonctionnement et les bases essentielles à connaître selon moi.   </p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Get Started</a></li>
 								</ul>
