updated the site!

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>My</strong> <span>Crypto Journey</span></a>
+						<a href="index.html" class="logo"><strong>My</strong><span>Crypto Journey</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -28,13 +28,13 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Introduction</a></li>
+							<li><a href="index.html">Accueil</a></li>
 							<li><a href="landing.html">C'est quoi la cryptomonnaie?</a></li>
 							<li><a href="generic.html">Qu'es-ce que le blockchain?</a></li>
 							<li><a href="elements.html">Aide mémoire</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Start Learning</a></li>
+							<li><a href="#" class="button primary fit">Commencer à apprendre</a></li>
 						</ul>
 					</nav>
 
@@ -42,14 +42,15 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Bienvenue sur <b>MyCryptoJourney</b>!</h1>
+								<h1>Bienvenue sur <span class="brandcolor-blue">My</span> <span class="brandcolor-yellow">Crypto </span><span class="brandcolor-blue">Journey</span> !</h1>
 							</header>
 							<div class="content">
-								<p>Ici, je vais expliquer clairement ce qu’est la cryptomonnaie, son fonctionnement et les bases essentielles à connaître selon moi.   </p>
+								<p>Ce site web regroupe différentes sections visant à expliquer la cryptomonnaie : son fonctionnement, son utilité et les notions de base que je juge importantes pour bien débuter.</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
+									<li><a href="#one" class="button next scrolly">Commencer</a></li>
 								</ul>
 							</div>
+							<p id="ps-note"><i>PS: Le contenu de ce site peut être modifié ou mis à jour à tout moment.</i></p>
 						</div>
 					</section>
 
@@ -63,8 +64,8 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="landing.html" class="link">La crypto c'est quoi exactement?</a></h3>
+										<p>En gros la crypto c'est une monnaie digital qui représente une val...</p>
 									</header>
 								</article>
 								<article>
@@ -72,8 +73,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3><a href="landing.html" class="link">Un blockchain qu'es ce que c'est?</a></h3>
+										<p>Brièvement, un blockchain, c'est un <strong>GROS</strong> registre digital qui enregsitre et garde de facon permanente tout les transactions passé d'une ou plusieurs crytptomonnaies</p>
 									</header>
 								</article>
 								<article>
@@ -81,8 +82,8 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
-										<p>Lorem etiam nullam</p>
+										<h3><a href="landing.html" class="link">Les termes courrament utilisé</a></h3>
+										<p>Ici, je vais expliquer plusieurs termes qu'on utilise courrament dans le domaine de la crypto et meme dans celui du trading en general.</p>
 									</header>
 								</article>
 								<article>
