updated the website

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Forty by HTML5 UP</title>
+		<title>My Crypto Journey</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>My</strong><span>Crypto Journey</span></a>
+						<a href="index.html" class="logo"><strong>MY</strong><span>CRYPTO JOURNEY</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -29,8 +29,8 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Accueil</a></li>
-							<li><a href="landing.html">C'est quoi la cryptomonnaie?</a></li>
-							<li><a href="generic.html">Qu'es-ce que le blockchain?</a></li>
+							<li><a href="crypto.html">C'est quoi la crypto?</a></li>
+							<li><a href="generic.html">Qu'es ce que c'est un blockchain?</a></li>
 							<li><a href="elements.html">Aide mémoire</a></li>
 						</ul>
 						<ul class="actions stacked">
@@ -42,7 +42,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Bienvenue sur <span class="brandcolor-blue">My</span> <span class="brandcolor-yellow">Crypto </span><span class="brandcolor-blue">Journey</span> !</h1>
+								<h1>Bienvenue sur <span class="brandcolor-blue">My</span><span class="brandcolor-yellow">Crypto</span><span class="brandcolor-blue">Journey</span> !</h1>
 							</header>
 							<div class="content">
 								<p>Ce site web regroupe différentes sections visant à expliquer la cryptomonnaie : son fonctionnement, son utilité et les notions de base que je juge importantes pour bien débuter.</p>
@@ -61,28 +61,28 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/btc.jpeg" alt="Un cellulaire ouvert entrain de trader du bitcoin" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">La crypto c'est quoi exactement?</a></h3>
-										<p>En gros la crypto c'est une monnaie digital qui représente une val...</p>
+										<h3><a href="crypto.html" class="link">La crypto c'est quoi exactement?</a></h3>
+										<p>En gros la crypto c'est une monnaie digital qui représente une valeur.</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/blockchain.png" alt="Une représentation graphique d'un blockchain" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Un blockchain qu'es ce que c'est?</a></h3>
+										<h3><a href="landing.html" class="link">Qu'es ce que c'est un blockchain?</a></h3>
 										<p>Brièvement, un blockchain, c'est un <strong>GROS</strong> registre digital qui enregsitre et garde de facon permanente tout les transactions passé d'une ou plusieurs crytptomonnaies</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/terms.png" alt="Un tableau avec des mots (des termes utlisé) en crypto" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Les termes courrament utilisé</a></h3>
+										<h3><a href="landing.html" class="link">Les termes fréquement utilisé dans le domaine.</a></h3>
 										<p>Ici, je vais expliquer plusieurs termes qu'on utilise courrament dans le domaine de la crypto et meme dans celui du trading en general.</p>
 									</header>
 								</article>
@@ -91,7 +91,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
+										<h3><a href="landing.html" class="link">Pourquoi ça existe et à quoi ça sert?</a></h3>
 										<p>Nisl sed aliquam</p>
 									</header>
 								</article>
